Added midi responsiveness.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="container">
-
+	<video src="combined/0eJuivY.mp4" autoplay="true" loop="true"></video>
 </div>
 
 <!-- bower:js -->
@@ -25,7 +25,7 @@
 <script src="bower_components/greensock/src/uncompressed/TweenMax.js"></script>
 <!-- endbower -->
 
-<script src="js/application.js"></script>
+<!--<script src="js/application.js"></script>-->
 <script src="js/main.js"></script>
 
 </body>
