Improved video switching effect.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 <body>
 
 <div class="container">
-	<video src="combined/0eJuivY.mp4" autoplay="true" loop="true"></video>
+	<video class="video1" src="combined/0eJuivY.mp4" autoplay="true" loop="true"></video>
+	<video class="video2" src="combined/0eJuivY.mp4" autoplay="true" loop="true"></video>
 </div>
 
 <!-- bower:js -->
